Closed
Bug 1126420
Opened 11 years ago
Closed 11 years ago
fatal (debug-build) assertion with width:-moz-max-content in vertical writing mode
Categories
(Core :: Layout: Block and Inline, defect)
Core
Layout: Block and Inline
Tracking
()
RESOLVED
FIXED
mozilla38
People
(Reporter: jfkthame, Assigned: jfkthame)
References
(Blocks 1 open bug)
Details
Attachments
(2 files)
189 bytes,
text/html
|
Details | |
2.66 KB,
patch
|
dbaron
:
review+
|
Details | Diff | Splinter Review |
The patch for bug 1122366 means that in vertical writing mode, nsBlockFrame::IsSelfEmpty will be passing width coords (instead of height) to IsNonAutoNonZeroHeight(), and these may include things like -moz-max-content that it is not prepared to handle.
This is similar to the assertion we had in bug 1113216, and I propose to wallpaper it in the same way for now, treating enumerated values for block-size as if they were 'auto' for the purposes of this check.
IsNonAutoNonZeroHeight() is only used by nsBlockFrame::IsSelfEmpty, so the worst that will happen as a result of this is that we'll sometimes incorrectly consider a block to be empty (e.g. if it has width:-moz-available), and we might therefore collapse margins in a case where we shouldn't.
Assignee | ||
Comment 1•11 years ago
|
||
Attachment #8555391 -
Flags: review?(dbaron)
Assignee | ||
Updated•11 years ago
|
Assignee: nobody → jfkthame
Status: NEW → ASSIGNED
Comment on attachment 8555391 [details] [diff] [review]
Don't assert when intrinsic size values are used for a block-size property, just pretend they're 'auto' for now
r=dbaron.
Maybe add a comment pointing this out in relevant bugs? (perhaps the ones in the comment?)
Attachment #8555391 -
Flags: review?(dbaron) → review+
Assignee | ||
Comment 3•11 years ago
|
||
Target Milestone: --- → mozilla38
Comment 4•11 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•