Bug 1126420 - Don't assert when intrinsic size values are used for a block-size property, just pretend they're 'auto' for now. r=dbaron